# AgriVibe

./: .gitignore  Cargo.toml  LICENSE  README.md  cloudbuild-backend.yaml  cloudbuild-frontend.yaml  metadata.json  package-lock.json  package.json
apps/api/: Cargo.toml  Dockerfile
apps/api/src/: fuzzy.rs  gemini.rs  main.rs
apps/web/: Dockerfile  next.config.ts  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/about/: page.tsx
apps/web/app/api/analyze/: route.ts
apps/web/app/api/chat/: route.ts
apps/web/app/api/recommend/: route.ts
apps/web/app/api/weather/: route.ts
apps/web/app/crops/: page.tsx
apps/web/components/: chatbot.tsx  crop-calculator.tsx  crop-card.tsx  fuzzy-details.tsx  history-panel.tsx  land-form.tsx  navbar.tsx  planting-calendar.tsx  pwa-register.tsx  sembalun-map.tsx  suitability-gauge.tsx  weather-widget.tsx
apps/web/components/ui/: card.tsx
apps/web/lib/: crops-db.ts  security.ts
apps/web/public/: manifest.json  sw.js
docs/: kecamatan-sembalun-dalam-angka-2025.md  statistik-harga-perdesaan-provinsi-nusa-tenggara-barat-2024.md
